# ghci-runner

./: README.md  ghci-runner.cabal  mkReadme.sh  stack.yaml
ghci-runner/: LICENSE  ghci-runner.cabal
ghci-runner/src/Dev/: Runner.hs
snowdrift/: snowdrift.cabal
snowdrift/dev/: DevelMain.hs  DevelRunner.hs
snowdrift/src/: Main.hs  Snowdrift.hs
snowdrift/test/: Main.hs
src/Dev/: Runner.hs
