name: ghci-runner
version: 0.0.0.0
category: development
maintainer: b@chreekat.net
synopsis: Helper function for running computations in ghci
description:
    This came directly from the yesod-scaffolding (DevelMain.hs). It has
    been generalized and librarified. For an example usage, see Snowdrift's
    dev/Runner.hs (FIXME: make a link once it's merged)
license: BSD3
license-file: LICENSE
build-type: Simple
cabal-version: >=1.18

library
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base < 5
        , foreign-store
    exposed-modules:
        Dev.Runner
