name: ghci-runner
version: 0.0.0.0
category: development
maintainer: b@chreekat.net
synopsis: FIXME
description:
    FIXME

    FIXME
license: BSD3
license-file: LICENSE
build-type: Simple
cabal-version: >=1.18

library
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base < 5
        , foreign-store
    exposed-modules:
        Dev.Runner
