name: snowdrift
version: 0.0.0.0
category: web
maintainer: dev@lists.snowdrift.coop
synopsis: FIXME
description:
    FIXME

    FIXME
license: AGPL-3
license-file: LICENSE.md
build-type: Simple
cabal-version: >=1.18

library
    hs-source-dirs: src, dev
    default-language: Haskell2010
    build-depends:
        base < 5
        , yesod
        , ghci-runner
    exposed-modules:
        Snowdrift
    other-modules:
        DevelRunner

test-suite test-snowdrift
    hs-source-dirs: test
    main-is: Main.hs
    type: exitcode-stdio-1.0
    default-language: Haskell2010
    build-depends:
        base < 5
        , snowdrift
